tests/syntax/bad/testfile-expr3-1.scala
class A { def m() { var x = a.x = ; } }
object Main { def main(args: Array[String]) { } }
